<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVariant"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="32dp"
        android:background="#003BCFDD"
        android:fontFamily="@font/oswald"
        android:text="@string/appname"
        android:textAllCaps="false"
        android:textColor="#0C69CD"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/to_login_btn"
        android:layout_width="289dp"
        android:layout_height="54dp"
        android:layout_marginTop="25dp"

        android:background="@drawable/rounded_bg"
        android:text="@string/to_loginPage_btn_text"
        android:textAllCaps="false"
        android:textColor="#FB5406"
        android:textSize="18sp"
        android:textStyle="italic"
        app:backgroundTint="#EFEFEF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_btn"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="474dp"
        android:layout_height="27dp"
        android:layout_marginBottom="32dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/register_pass"
        android:layout_width="295dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textColor="#0C69CD"
        app:layout_constraintBottom_toTopOf="@+id/register_confirm_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <Button
        android:id="@+id/create_user_btn"
        android:layout_width="289dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"

        android:background="@drawable/rounded_bg"
        android:text="@string/create_user_btn_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FB5406"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_pass" />

    <EditText
        android:id="@+id/register_confirm_pass"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/register_confirm_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textColor="#0C69CD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pass" />

    <EditText
        android:id="@+id/register_email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:textColorHint="@color/grey"
        android:textColor="#0C69CD"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/register_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>